Using Stream#toList instead of Stream#collect(Collectors.toList()) where possible